--- a/_posts/2023-09-05-1.md
+++ b/_posts/2023-09-05-1.md
@@ -1,6 +1,8 @@
 ---
 title: Добре дошли
 description: Първа публикация
+category: 0
+permalink: /:categories/добре-дошли/
 comments: true
 author: salif
 layout: post
