Премахни Sans шрифта, добави светла тема и бутони

--- a/контакт.md
+++ b/контакт.md
@@ -1,6 +1,6 @@
 ---
 title: Контакт | Блогът на Салиф
-description: Искате да се свържете с мен? Тази страница ви казва как.
+description: За контакт с мен
 permalink: /контакт/
 layout: default
 ---
