--- a/_posts/2023-09-05-1.md
+++ b/_posts/2023-09-05-1.md
@@ -4,7 +4,7 @@ description: Първа публикация
 category: 0
 permalink: /:categories/добре-дошли/
 comments: true
-author: salif
+author: main
 layout: post
 ---
 
