Добави Noto Sans Mono и поправки

--- a/_posts/2023-09-07-1.md
+++ b/_posts/2023-09-07-1.md
@@ -8,21 +8,21 @@ author: main
 layout: post
 ---
 
-Ако този блог ви харесва и искате да направите ваш собствен блог, идентичен на моя, следвайте тези инструкции. 
+Ако този блог ви харесва и искате да имате ваш собствен блог, идентичен на моя, следвайте тези инструкции. 
 Блогът използва технологии, които са трудни за използване от непрограмисти, но въпреки това, мисля че 
-можете да се справите с това.
+можете да се справите и без да разбирате от програмиране.
 
-За целта ви е нужен [GitHub](https://github.com) акаунт. След като се регистрирате и влезете във вашия акаунт,
-отворете следния линк: [github.com/salif/blog.salif.eu/fork](https://github.com/salif/blog.salif.eu/fork).
+За целта ви е нужно да владеете английски и езика Markdown и да имате [GitHub](https://github.com) акаунт. 
+След като се регистрирате и влезете във вашия GitHub акаунт, отворете следния 
+линк: [github.com/salif/blog.salif.eu/fork](https://github.com/salif/blog.salif.eu/fork).
 
 В полето „Repository name“ въведе име. Ако не искате да използвате ваш собствен домейн за блога, препоръчвам да въведете като име:
 
-„`потребителското ви име`.github.io“, например: 
-`myusername.github.io`. Така блогът ви ще бъде на този адрес.
+„`потребителското ви име`.github.io“, например: `myusername.github.io`. Така блогът ви ще бъде на този адрес.
 
-В противен случай, няма значение какво ще бъде името, може да бъде примерно `myblog`.
+В противен случай, може да въведете примерно `blog`.
 
-След това натиснете бутона „Create fork“. Това ще създаде копие на моето хранилище \(repository\) във вашия акаунт. 
+След това натиснете бутона „Create fork“. Това ще създаде хранилище \(git repository\), което е копие \(fork\) на моето хранилище във вашия акаунт. 
 След това следват две стъпки: 
 
 * [да конфигурирате вашия блог](#конфигуриране)
@@ -32,16 +32,16 @@ layout: post
 
 Изтрийте следното от хранилището ви:
 
+* `CNAME` - изтрийте файла
 * `assets/icons/` - вътре има иконки, изтрийте ги и ако искате сложете ваши иконки, за да ги генерирате използвайте [favicon-generator.org](https://www.favicon-generator.org/)
 * `favicon.ico` - изтрийте иконката
 * `_posts/` - изтрийте всички файлове в тази папка, те са предназначени за моя блог, а не за вашия
-* 
 
 Редактирайте следните файлове:
 
 * `_data/authors.yml` - заместете моите данни с вашите, може да пропуснете имейл адреса, не се използва никъде в блога
 * `_includes/verification.html` - изтрийте съдържанието на файла, но не и самия файл, или само заместете линковете с ваши профили
-* `about.md` и `contact.md`
+* `about.md`, `contact.md` и `feeds.md`
 
 Редактирайте файла `_config.yml` и промене стойностите на:
 
@@ -56,19 +56,22 @@ layout: post
 
 ### Публикувайте блога си онлайн
 
-За да бъде вашият блог онлайн, трябва да го публикувате в „GitHub Pages“. Изтрийте файла `CNAME`, който се намира в хранилището.
-После отидете в настройките на вашето хранилище като отворите таба „Settings“, този таб би трябвало да е последният в редица
-от табове започващ с „Code“, „Pull requests“, „Actions“. След това ще видите вертикални табове, намерете и отворете 
-таба „Pages“. После под „Build and deployment“ ще видите настройка „Source“, тя би трябвало да е настроена 
+За да бъде вашият блог онлайн, трябва да го публикувате в „GitHub Pages“. Изтрийте файла `CNAME`, който се намира в хранилището, 
+ако още не сте го направили. После отидете в настройките на вашето хранилище като отворите таба „Settings“, този таб би трябвало 
+да е последният в редица от табове започващ с „Code“, „Pull requests“, „Actions“. След това ще видите вертикални табове, намерете и 
+отворете таба „Pages“. После под „Build and deployment“ ще видите настройка „Source“, тя би трябвало да е настроена 
 на „Deploy from a branch“. После под „Branch“ натиснете „None“ за избор на branch, изберете `osnoven`, до него изберете 
 папка `/ (root)` и натиснете „Save“. Ако всичко е успешно, блогът ви трябва да е онлайн.
 
-Ако сте кръстили хранилището на блога ви `myblog`, адресът му е:
+Ако сте кръстили хранилището на блога ви `blog`, адресът му е:
 
-„https://`потребителското ви име`.github.io/myblog/“
+„https://`потребителското ви име`.github.io/blog/“, например: `https://myusername.github.io/blog/`
 
-например: `https://myusername.github.io/myblog/`
+Ако желаете, настройте собствен домейн под „Custom domain“.
 
-Ако искате, настройте собствен домейн под „Custom domain“.
+Ако не се справите или имате въпроси, 
+се [свържете с мен](/контакт) или напише коментар. Не синхронизирайте GitHub хранилището ви с моето, ако не знаете какво правите.
 
-Ако не се справите или имате въпроси, се [свържете с мен](/контакт).
+### Публикуване в блога
+
+Предстои в следваща публикация.
