--- a/_posts/2023-09-08-3.md
+++ b/_posts/2023-09-08-3.md
@@ -30,12 +30,15 @@ layout: post
 и категориите са добър начин да се разделят темите, обикновено имената на категориите са думи, но аз обичам числата и затова избрах категорията, за публикации отнасящи се
 за самия блог, да се казва „0“.
 
-Следва `permalink`, това е адресът на който ще се намира публикацията, моята публикация ще се намира на адрес `/:categories/направи-си-блог-2/`,
+Следва „permalink“, това е адресът на който ще се намира публикацията, моята публикация ще се намира на адрес `/:categories/направи-си-блог-2/`,
 тоест `/0/направи-си-блог-2/`, защото `:categories` ще се замести с категорията, която е „0“, мога, ако искам, да го променя на `/направи-си-блог-2/`, или да изтрия `permalink`, ако го
 направя, публикацията ще се намира на адрес „/3“, защото това е заглавието във файла, след датата. След това, за да включа коментарите пиша `comments: true`, ако не искам да има 
-коментари под публикацията, пиша `comments: false`. Следва авторът `author`, той трябва да е настроен във файла `_data/authors.yml` в хранилището. Най-накрая е `layout: post`,
+коментари под публикацията, пиша `comments: false`. Следва авторът \(author\), той трябва да е настроен във файла `_data/authors.yml` в хранилището. Най-накрая е `layout: post`,
 което винаги трябва да е `layout: post`, освен ако не смятам да използвам друг „layout“ от папката`_layouts/`. Всичко това е обградено от `---`. Под `---` започва
 самата публикация, която пиша на езика Markdown и мога да вмъкна HTML код, ако поискам. В тази публикация ще добавя изображение, ще го кача в сайта [postimg.cc](https://postimg.cc), 
-след като го кача, копирам линка от „Thumbnail for website:“, и го поставям тук.
+след като го кача, копирам линка от „Thumbnail for website:“, и го поставям между редовете в публикацията.
 
 <a href='https://postimg.cc/zyjncDL3' target='_blank'><img src='https://i.postimg.cc/zyjncDL3/draft-3-image.png' loading="lazy" alt='изображение' /></a>
+
+Натискам „Commit changes“ за да запазя файла, дори и да не съм завършил публикацията. По-късно мога да направя още промени в публикацията, и когато публикацията е завършена, създавам/отварям „pull request“ от 
+`draft_3` към `osnoven` за да слея промените в основното разклонение, така промените \(новата публикация\) ще се публикуват в сайта на блога.
