--- a/_posts/2023-09-08-3.md
+++ b/_posts/2023-09-08-3.md
@@ -41,4 +41,5 @@ layout: post
 <a href='https://postimg.cc/zyjncDL3' target='_blank'><img src='https://i.postimg.cc/zyjncDL3/draft-3-image.png' loading="lazy" alt='изображение' /></a>
 
 Натискам „Commit changes“ за да запазя файла, дори и да не съм завършил публикацията. По-късно мога да направя още промени в публикацията, и когато публикацията е завършена, създавам/отварям „pull request“ от 
-`draft_3` към `osnoven` за да слея промените в основното разклонение, така промените \(новата публикация\) ще се публикуват в сайта на блога.
+`draft_3` към `osnoven` с цел да слея промените в основното разклонение, така промените \(новата публикация\) ще се публикуват в сайта на блога. След като създам „pull request“, мога да натисна 
+„Merge pull request“ за сливане, но вместо това ще променя бутона на „Squash and merge“ за да слея всички промени като един общ „commit“.
