--- a/404.md
+++ b/404.md
@@ -11,8 +11,5 @@ description: Страницата не е намерена
 
 Изглежда, че нищо не бе намерено на това място. Ето списък с последните публикации:
 
-{% for post in site.posts limit:5 %}
-<ul>
-<li><a href="{{ post.url }}">{{ post.title }}</a></li>
-</ul>
+{% for post in site.posts limit:5 %}* [{{ post.title }}]({{ post.url }})
 {% endfor %}
