--- a/404.md
+++ b/404.md
@@ -5,7 +5,7 @@ title: Страницата не е намерена
 description: Страницата не е намерена
 ---
 
-# 🙊 Опа!
+# Опа!
 
 ## Заявената от вас страница не може да бъде намерена.
 
